
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int (* zwsetvaluekey_TYPE ) (int ,int ,int ,int ,int ,int ) ;
typedef int * HINSTANCE ;


 scalar_t__ GetProcAddress (int *,char*) ;
 int * LoadLibrary (char*) ;
 int MY_NULL ;

int main(int argc, char *argv[]) {
HINSTANCE dll;
zwsetvaluekey_TYPE my_ZwSetValueKey;

  if ((dll=LoadLibrary("ntdll.dll"))!=((void*)0)) {

     if ((my_ZwSetValueKey=(zwsetvaluekey_TYPE)GetProcAddress(dll,"ZwSetValueKey"))!=((void*)0)) {

         my_ZwSetValueKey(MY_NULL,MY_NULL,MY_NULL,MY_NULL,MY_NULL,MY_NULL);

     }
  }

}
